@@ -14,7 +14,8 @@ Changes in Version 1.0.0
   o Added the transmod function, which can be used to transform one model type (e.g., using a Cholesky decomposition) to another model type (e.g., a GGM).
   o Improved support for models with only one (latent) variable
   o Added the 'logbook' function which can be used to more easily retrieve the psychonetrics logbook
-  o The 'partialprune' function has been updated and now allows for pruning specific matrices as well as returning different models.
+  o The 'partialprune' function has been updated and now allows for pruning specific matrices as well as returning different models
+  o Fixed some instances where the 'equal' argument wasn't working
 
 Changes in Version 0.11.5
   o Fixes to support Matrix 1.7-0
